# RelationalDatabase

./: CMakeLists.txt  Database.cpp  Database.h  Datalog.cpp  Datalog.h  Parameter.cpp  Parameter.h  Parser.cpp  Parser.h  Predicate.cpp  Predicate.h  Relation.cpp  Relation.h  Rule.cpp  Rule.h  Scanner.cpp  Scanner.h  Scheme.cpp  Scheme.h  Token.cpp  Token.h  TokenType.h  Tuple.cpp  Tuple.h  main.cpp
original/: Database.cpp  Relation.cpp  main.cpp
